--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 	<title> Hello Git</title>
 </head>
 <body>
+<style type="text/css">
+	h1 {
+		position: absolute;
+		top: 40%;
+		width: 100%;
+		text-align: center;
+		font-family: Helvetica;
 
+	}
 </style>
 <h1>Hi</h1>
 </body>
