--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 <style type="text/css">
+	body {
+		background-color: #2ecc71;
+		color: white;
+	}
 	h1 {
 		position: absolute;
 		top: 40%;
